Fix: Usar Dockerfile ao invés de nixpacks

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,19 @@ Thumbs.db
 # IDE
 .vscode/
 .idea/
+notepad .dockerignore
+```
+
+**Cole isso:**
+```
+node_modules
+api/node_modules
+npm-debug.log
+.env
+.git
+.gitignore
+README.md
+.DS_Store
+api/documents
+api/uploads
+*.log
