fix: especificar Node.js 20.x e adicionar patch de compatibilidade
- Alterado engines para Node.js 20.x no package.json
- Adicionado server-patched.js com patch para compatibilidade
- Adicionado vercel.json para forçar Node.js 20 no Vercel
- Resolvido problema com pdf-parse no Node.js 24

--- a/api/package.json
+++ b/api/package.json
@@ -1,14 +1,14 @@
 {
   "name": "gerador-documentos-api",
   "version": "3.0.0",
-  "main": "server.js",
+  "main": "server-patched.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server-patched.js",
     "dev": "nodemon server.js",
     "seed": "node utils/seed-templates.js"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "20.x"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
