--- a/api/package.json
+++ b/api/package.json
@@ -1,14 +1,15 @@
 {
   "name": "gerador-documentos-api",
   "version": "3.0.0",
-  "main": "server-patched.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node server-patched.js",
+    "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed": "node utils/seed-templates.js"
+    "seed": "node utils/seed-templates.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "20.x"
+    "node": "18.x"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
@@ -21,8 +22,10 @@
     "mercadopago": "^2.0.0",
     "mongoose": "^8.0.0",
     "multer": "^2.0.2",
-    "pdf-parse": "^2.4.5",
     "pdfkit": "^0.13.0",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.0"
   }
 }
