--- a/fly.toml
+++ b/fly.toml
@@ -4,32 +4,40 @@ primary_region = "gru"
 [build]
   dockerfile = "Dockerfile"
 
+[env]
+  PORT = "3000"
+  NODE_ENV = "production"
+
 [http_service]
   internal_port = 3000
   force_https = true
   auto_start_machines = true
   auto_stop_machines = true
+  min_machines_running = 1
   
+  # Health check OBRIGATÓRIO - configuração robusta
   [[http_service.checks]]
-    grace_period = "15s"
+    grace_period = "20s"
     interval = "30s"
     method = "GET"
     path = "/health"
-    timeout = "10s"
+    timeout = "15s"
     protocol = "http"
 
+  # Backup check
   [[http_service.checks]]
-    grace_period = "15s"
+    grace_period = "20s"
     interval = "30s"
     method = "GET"
     path = "/"
-    timeout = "10s"
+    timeout = "15s"
 
 [[vm]]
   cpu_kind = "shared"
   cpus = 1
   memory_mb = 1024
 
-[env]
-  PORT = "3000"
-  NODE_ENV = "production"
+# Volume para armazenar documentos gerados (opcional)
+[mounts]
+  source = "documents_storage"
+  destination = "/data"
