--- a/api/package.json
+++ b/api/package.json
@@ -5,11 +5,10 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed": "node utils/seed-templates.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "seed": "node utils/seed-templates.js"
   },
   "engines": {
-    "node": "18.x"
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
