--- a/fly.toml
+++ b/fly.toml
@@ -15,7 +15,7 @@ primary_region = "gru"
   auto_stop_machines = true
   min_machines_running = 1
   
-  # Health check OBRIGATÓRIO - configuração robusta
+  # Health check OBRIGATÓRIO
   [[http_service.checks]]
     grace_period = "20s"
     interval = "30s"
@@ -24,7 +24,6 @@ primary_region = "gru"
     timeout = "15s"
     protocol = "http"
 
-  # Backup check
   [[http_service.checks]]
     grace_period = "20s"
     interval = "30s"
@@ -37,7 +36,7 @@ primary_region = "gru"
   cpus = 1
   memory_mb = 1024
 
-# Volume para armazenar documentos gerados (opcional)
+# Volume opcional para documentos
 [mounts]
   source = "documents_storage"
   destination = "/data"
