--- a/fly.toml
+++ b/fly.toml
@@ -12,31 +12,18 @@ primary_region = "gru"
   internal_port = 3000
   force_https = true
   auto_start_machines = true
-  auto_stop_machines = true
-  min_machines_running = 1
-  
-  # Health check OBRIGATÓRIO
+  auto_stop_machines = "suspend"
+  min_machines_running = 0
+  processes = ["app"]
+
   [[http_service.checks]]
-    grace_period = "20s"
     interval = "30s"
+    timeout = "15s"
+    grace_period = "20s"
     method = "GET"
     path = "/health"
-    timeout = "15s"
-    protocol = "http"
-
-  [[http_service.checks]]
-    grace_period = "20s"
-    interval = "30s"
-    method = "GET"
-    path = "/"
-    timeout = "15s"
 
 [[vm]]
+  memory = "512mb"
   cpu_kind = "shared"
   cpus = 1
-  memory_mb = 1024
-
-# Volume opcional para documentos
-[mounts]
-  source = "documents_storage"
-  destination = "/data"
