--- a/fly.toml
+++ b/fly.toml
@@ -12,31 +12,19 @@ primary_region = "gru"
   internal_port = 3000
   force_https = true
   auto_start_machines = true
-  auto_stop_machines = true
-  min_machines_running = 1
-  
-  # Health check OBRIGATÓRIO
-  [[http_service.checks]]
-    grace_period = "20s"
-    interval = "30s"
-    method = "GET"
-    path = "/health"
-    timeout = "15s"
-    protocol = "http"
+  auto_stop_machines = "suspend"
+  min_machines_running = 0
+  processes = ["app"]
 
-  [[http_service.checks]]
-    grace_period = "20s"
-    interval = "30s"
-    method = "GET"
-    path = "/"
-    timeout = "15s"
+  # REMOVIDO health check temporariamente para debug
+  # [[http_service.checks]]
+  #   interval = "30s"
+  #   timeout = "15s"
+  #   grace_period = "20s"
+  #   method = "GET"
+  #   path = "/health"
 
 [[vm]]
+  memory = "512mb"
   cpu_kind = "shared"
   cpus = 1
-  memory_mb = 1024
-
-# Volume opcional para documentos
-[mounts]
-  source = "documents_storage"
-  destination = "/data"
