--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,27 @@
-[build]
-  publish = "public"
-  functions = "netlify/functions"
 
-[dev]
-  port = 8888
+[build]
+
+  command = ""
+
+  publish = "."
 
 [[redirects]]
+
   from = "/*"
+
   to = "/index.html"
+
   status = 200
 
-[functions]
-  node_bundler = "esbuild"
+[[headers]]
+
+  for = "/*"
+
+  [headers.values]
+
+    X-Frame-Options = "DENY"
+
+    X-XSS-Protection = "1; mode=block"
+
+    X-Content-Type-Options = "nosniff"
+
