--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "mercadopago": "^2.0.0",
     "mongoose": "^8.0.0",
     "multer": "^2.0.2",
+    "pdf-parse": "^2.4.5",
     "pdfkit": "^0.13.0",
     "uuid": "^9.0.1"
   },
