--- a/api/package.json
+++ b/api/package.json
@@ -11,21 +11,18 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.71.2",
-    "axios": "^1.13.2",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mammoth": "^1.11.0",
-    "mercadopago": "^2.0.0",
-    "mongoose": "^8.0.0",
-    "multer": "^2.0.2",
-    "node-fetch": "^2.7.0",
-    "pdf-parse": "^2.4.5",
-    "pdfkit": "^0.13.0",
-    "uuid": "^9.0.1"
-  },
+  "express": "^4.18.2",
+  "cors": "^2.8.5",
+  "dotenv": "^16.3.1",
+  "multer": "^1.4.5-lts.1",
+  "node-fetch": "^2.7.0",
+  "mammoth": "^1.11.0",
+  "pdf-parse": "^1.1.1",
+  "pdfkit": "^0.13.0",
+  "mongoose": "^8.0.0",
+  "uuid": "^9.0.1",
+  "body-parser": "^1.20.2"
+},
   "devDependencies": {
     "nodemon": "^3.0.0"
   }
